[workspace]
resolver = "2"



members = [
    "test",
    "sfio-tracing-ffi",
]

[workspace.dependencies]
oo-bindgen = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "deny"
unreachable_pub = "deny"
trivial_casts = "deny"
missing_docs = "deny"
warnings = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
missing_copy_implementations = "deny"

[workspace.lints.clippy]