[package]
name = "sfio-tracing-ffi"
description = "An oo-bindgen model for using tracing in an FFI environment"
version = "0.5.0"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://github.com/stepfunc/tracing-ffi"
repository = "https://github.com/stepfunc/tracing-ffi"

[dependencies]
oo-bindgen = { git = "https://github.com/stepfunc/oo_bindgen.git", branch = "feature/drop-safe-futures" }