[package]
name = "test"
version = "0.5.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "json"] }
lazy_static = "1.4.0"

[build-dependencies]
oo-bindgen = { workspace = true }
sfio-tracing-ffi = { path = "../sfio-tracing-ffi" }