[package]
name = "tracing-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.2"
lazy_static = "1.4.0"

[build-dependencies]
oo-bindgen = { git = "https://github.com/stepfunc/oo_bindgen.git", branch = "main" }
rust-oo-bindgen = { git = "https://github.com/stepfunc/oo_bindgen.git", branch = "main" }
tracing-ffi-schema = { path = "../tracing-ffi-schema" }